<resources>
    <!-- splash activity -->
    <string name="app_name">BestApp2023</string>
    <string name="Welcome">Benvenuto</string>
    <string name="permessi">Accetta i permessi per continuare</string>
    <string name="IntroButton">Clicca qui!</string>

    <!-- login e sign up -->
    <string name="nome">Nome e cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">inserisci di nuovo la password</string>
    <string name="loginText">Accedi</string>
    <string name="signupText">Registrati</string>
    <string name="switchtosignup">Non sei registrato? Iscriviti ora</string>
    <string name="switchtologin">Sei già registrato? Accedi</string>

    <!-- main activity -->
    <string name="address">Indirizzo</string>
    <string name="Pizza">Pizza</string>
    <string name="Sushi">Sushi</string>
    <string name="Piadina">Piadina</string>
    <string name="Hamburger">Hamburger</string>
    <string name="Cinese">Cinese</string>
    <string name="Dolci">Dolci</string>
    <string name="cerca">Cerca</string>
    <string name="accesso">Accedi</string>
    <string name="home">Home</string>
    <string name="dati">I miei dati</string>
    <string name="prenotazioni">Le mie prenotazioni</string>
    <string name="signout">Esci</string>

    <!-- Dropdown menu città -->
    <string-array name="citta">
        <item>Genova</item>
        <item>Savona</item>
    </string-array>

    <!-- NEW RESERVATION FRAGMENT -->
    <!-- Dropdown menu nome ristorante -->
    <string-array name="array_nome">
        <item>Pino</item>
    </string-array>

    <!-- INVITE FRIENDS FRAGMENT-->
    <string name="invitefriendstext">Invita i tuoi amici: per te e per loro il 15% di sconto sulla prima prenotazione!</string>

    <!-- Dropdown menu orario prenotazione -->
    <string-array name="array_orario">
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>
    </string-array>

    <!-- Dropdown menu numero persone-->
    <string-array name="array_persone">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>

    </string-array>



    <!-- Stringhe per le prenotazioni-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orario_di_apertura">Orario di apertura:</string>
    <string name="orario_di_chiusura">Orario di chiusura:</string>
    <string name="via">Via:</string>
    <string name="tipo">Tipo:</string>
    <string name="nome_ristorante">Nome:</string>
    <string name="citt">Città:</string>
    <string name="nuova_prenotazione">Nuova prenotazione</string>
    <string name="prenotazione_avvenuta_correttamente">Prenotazione avvenuta correttamente!</string>
    <string name="ristorante">Ristorante:</string>
    <string name="data">Data:</string>
    <string name="orario">Orario:</string>
    <string name="numero_persone">Numero persone:</string>
    <string name="oggi">Oggi</string>
    <string name="riprenotare">Per riprenotare, tornare alla home ed effettuare una nuova selezione</string>
    <string name="il_mio_profilo">Il mio profilo</string>
    <string name="condividi_bestapp2023">Condividi BestApp2023</string>
    <string name="invita">INVITA</string>
    <string name="profilo">PROFILO</string>
    <string name="i_miei_dati">I miei dati BestApp2023</string>
    <string name="mangia_con_bestapp2023">Mangia con BestApp2023</string>
    <string name="prenota_ora">PRENOTA ORA</string>
    <string name="nuova_prenotazione_button">Nuova prenotazione</string>
    <string name="nome_ristorante_crearres">Nome</string>
    <string name="orario_ristorante_creares">Orario</string>
    <string name="n_persone_creares">N° persone</string>
    <string name="conferma_prenotazione_button">Conferma Prenotazione</string>


</resources>