<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:scrollbars="none"> <!--per far scomparire lo scroll bar-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlPizza"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_layout_button">
            <ImageView
                android:id="@+id/ivPizza"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/pizza">
            </ImageView>
            <TextView
                android:id="@+id/tvPizza"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/black"
                android:text="@string/Pizza"
                android:textAppearance="@style/TextAppearance.AppCompat">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSushi"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_layout_button">
            <ImageView
                android:id="@+id/ivSushi"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/sushi">
            </ImageView>
            <TextView
                android:id="@+id/tvSushi"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Sushi"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.AppCompat">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPiadina"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_layout_button">

            <ImageView
                android:id="@+id/ivPiadina"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/piadina"></ImageView>

            <TextView
                android:id="@+id/tvPiadina"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Piadina"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#000000"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlHamburger"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_layout_button">

            <ImageView
                android:id="@+id/ivHamburger"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/hamburger"></ImageView>

            <TextView
                android:id="@+id/tvHamburger"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Hamburger"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#000000"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlCinese"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_layout_button">

            <ImageView
                android:id="@+id/ivCinese"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/cinese"></ImageView>

            <TextView
                android:id="@+id/tvCinese"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Cinese"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#000000"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlDolci"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_layout_button">
            <ImageView
                android:id="@+id/ivDolci"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dolci">
            </ImageView>
            <TextView
                android:id="@+id/tvDolci"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/black"
                android:text="@string/Dolci"
                android:textAppearance="@style/TextAppearance.AppCompat">
            </TextView>
        </RelativeLayout>
    </LinearLayout>
</HorizontalScrollView>